# tvstreamer

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  mypy.ini  pr.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  candles.md  cli.md  index.md
examples/: demo_stream.py  test_auth.py  test_stream_candle.py
scripts/: bump_version.sh  smoke_quote_stream.py
tests/: conftest.py  e2e_cli.py  test_auth_module.py  test_candle.py  test_cli.py  test_cli_candles.py  test_cli_happy.py  test_cli_origin.py  test_cli_validation.py  test_connection.py  test_decoder.py  test_events.py  test_historic_ws.py  test_hub.py  test_json_utils.py  test_main.py  test_missing_websockets.py  test_origin_header.py  test_quote_add_symbols.py  test_smoke.py  test_streamer.py  test_streaming.py  test_version.py  test_wsclient.py  test_wsclient_auth.py
tvstreamer/: __init__.py  __main__.py  auth.py  cli.py  connection.py  constants.py  decoder.py  events.py  exceptions.py  historic.py  hub.py  intervals.py  json_utils.py  logging_utils.py  messages.py  models.py  settings.py  streamer.py  streaming.py  wsclient.py
