[tool.poetry]
name = "tvstreamer"
# Version is the **single source of truth**. `tvstreamer.__init__.__version__`
# is populated at runtime via `importlib.metadata.version()` to avoid keeping
# multiple copies in sync.
# Keep semantic version starting at 0.1.x while project is in early development
version = "0.1.0"
# Stream live & historical market data from TradingView’s undocumented
# WebSocket API.
description = "TradingView WebSocket integration & historical data downloader"
authors = ["rupjae"]
license = "MIT"
readme = "README.md"
# Repository metadata intentionally left blank while project identity is being re-established.
# homepage = ""
# repository = ""
# documentation = ""

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
# External runtime dependencies – streaming-only client keeps the list lean.
websocket-client = ">=0.57.0"
typer = "^0.9.0"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.scripts]
tvws = "tvstreamer.cli:run"

[tool.poetry.group.dev.dependencies]
pytest = "*"
anyio = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
