[tool.poetry]
name = "tvstreamer"
# Version is the **single source of truth**. `tvstreamer.__init__.__version__`
# is populated at runtime via `importlib.metadata.version()` to avoid keeping
# multiple copies in sync.
# Keep semantic version starting at 0.1.x while project is in early development
version = "0.1.0"
# Stream live & historical market data from TradingView’s undocumented
# WebSocket API.
description = "TradingView WebSocket integration & historical data downloader"
authors = ["rupjae"]
license = "MIT"
readme = "README.md"
# Repository metadata intentionally left blank while project identity is being re-established.
# homepage = ""
# repository = ""
# documentation = ""

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
# External runtime dependencies – streaming-only client keeps the list lean.
websocket-client = ">=0.57.0"
typer = "^0.9.0"
tomli = { version = "^2.0.1", python = "<3.11" }

# -------------------------------------------------------------------
# Optional dependency groups (install via `pip install tvstreamer[cli]`)
# -------------------------------------------------------------------

[tool.poetry.extras]
cli = ["typer", "rich"]

[tool.poetry.scripts]
tvws = "tvstreamer.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "*"
anyio = "^4.0.0"

# -------------------------------------------------------------------
# Development tooling – formatting, linting, type-checking
# -------------------------------------------------------------------
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# -------------------------------------------------------------------
# Tool configuration – Black
# -------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

# -------------------------------------------------------------------
# Tool configuration – Ruff
# -------------------------------------------------------------------


[tool.ruff]
line-length = 100

# New (v0.4+) Lint sub-table ----------------------------------------

[tool.ruff.lint]
# Limit rule-set to manageable core: style & error detection.
select = ["E", "F", "I"]
# E501 (line length) overlaps with Black; E402 for late imports in __init__.
ignore = ["E501", "E402", "F401", "I001"]
